compiler/testData/diagnostics/tests/regressions/kt2956.kt
// RUN_PIPELINE_TILL: SOURCE
val a: String = <!NO_COMPANION_OBJECT!>Nothing<!>